Name:           Unixutils
Version:        1.16
License:        BSD3
-- License-File:	debian/copyright
Author:         Jack Donaldson
Homepage:       http://www.freespire.org/
Build-Depends:  base, unix, regex-compat, process, bytestring, directory, old-time, parallel
Synopsis:       A crude interface between Haskell and Unix-like operating systems
ghc-options:	-fglasgow-exts -O2 -fasm
Exposed-modules:
        System.Unix.Directory, System.Unix.FilePath, System.Unix.List,
	System.Unix.Misc, System.Unix.Mount, System.Unix.Process,
	System.Unix.Progress, System.Unix.SpecialDevice, System.Unix.Files

-- For more complex build options see:
-- http://www.haskell.org/ghc/docs/latest/html/Cabal/
